CompilerFiles/src/parser.output
Terminals unused in grammar

   T_LSQBRACKET
   T_RSQBRACKET
   T_LTRIBRACKET
   T_RTRIBRACKET
   T_DOT
   T_COLON
   T_APOSTROPHE
   T_COMMENT


State 45 conflicts: 9 shift/reduce
State 96 conflicts: 1 shift/reduce
State 97 conflicts: 8 shift/reduce
State 98 conflicts: 9 shift/reduce
State 107 conflicts: 9 shift/reduce
State 108 conflicts: 9 shift/reduce
State 114 conflicts: 8 shift/reduce
State 115 conflicts: 8 shift/reduce
State 116 conflicts: 8 shift/reduce
State 117 conflicts: 8 shift/reduce
State 118 conflicts: 8 shift/reduce
State 119 conflicts: 8 shift/reduce
State 120 conflicts: 8 shift/reduce
State 121 conflicts: 8 shift/reduce
State 129 conflicts: 9 shift/reduce


Grammar

    0 $accept: ROOT $end

    1 ROOT: TOP_LEVEL

    2 TOP_LEVEL: FUNCTION_LIST

    3 FUNCTION_LIST: FUNCTION_LIST DEC_FUNCTION
    4              | FUNCTION_LIST DEC_VARIABLE
    5              | DEC_FUNCTION
    6              | DEC_VARIABLE

    7 DEC_FUNCTION: TYPE T_ID T_LBRACKET ARGUMENT_LIST T_RBRACKET T_LCUBRACKET BODY T_RCUBRACKET

    8 ARGUMENT_LIST: ARGUMENT_LIST T_COMMA TYPE T_ID
    9              | TYPE T_ID
   10              | %empty

   11 ARGUMENT_LIST_NO_TYPE: ARGUMENT_LIST_NO_TYPE T_COMMA ID
   12                      | ARGUMENT_LIST_NO_TYPE T_COMMA NUMBER
   13                      | ID
   14                      | NUMBER
   15                      | %empty

   16 TYPE: T_INT
   17     | T_DOUBLE
   18     | T_STRING
   19     | T_VOID
   20     | T_BOOL

   21 BODY: BODY STATEMENT
   22     | STATEMENT
   23     | %empty

   24 STATEMENT: RETURN_STATEMENT
   25          | DEC_VARIABLE
   26          | FUNCTION_STATEMENT
   27          | ASSIGN_STATEMENT
   28          | IFANDORELSEORELIF
   29          | WHILE_STATEMENT

   30 RETURN_STATEMENT: T_RETURN EXPR_TOP T_SEMICOLON

   31 DEC_VARIABLE: TYPE T_ID T_ASSIGN EXPR_TOP T_SEMICOLON
   32             | TYPE T_ID T_SEMICOLON

   33 ASSIGN_STATEMENT: T_ID T_ASSIGN EXPR_TOP T_SEMICOLON

   34 FUNCTION_STATEMENT: T_ID T_LBRACKET ARGUMENT_LIST_NO_TYPE T_RBRACKET T_SEMICOLON

   35 IFANDORELSEORELIF: IFANDORELIF ELSE_STATEMENT
   36                  | IFANDORELIF

   37 IFANDORELIF: IFANDORELIF ELSE_IF_STATEMENT
   38            | IF_STATEMENT

   39 WHILE_STATEMENT: T_WHILE CONDITION T_LCUBRACKET BODY T_RCUBRACKET

   40 IF_STATEMENT: T_IF CONDITION T_LCUBRACKET BODY T_RCUBRACKET

   41 ELSE_IF_STATEMENT: T_ELSE T_IF CONDITION T_LCUBRACKET BODY T_RCUBRACKET

   42 ELSE_STATEMENT: T_ELSE T_LCUBRACKET BODY T_RCUBRACKET

   43 CONDITION: CONDITION T_LEQUAL CONDITION
   44          | CONDITION T_LAND CONDITION
   45          | CONDITION T_LOR CONDITION
   46          | T_LNOT CONDITION
   47          | CONDITION T_LNOTEQUAL CONDITION
   48          | CONDITION T_LMORE CONDITION
   49          | CONDITION T_LLESS CONDITION
   50          | CONDITION T_LMOREEQUAL CONDITION
   51          | CONDITION T_LLESSEQUAL CONDITION
   52          | EXPR_TOP
   53          | T_LBRACKET CONDITION T_RBRACKET

   54 EXPR_TOP: EXPR
   55         | T_SPEACHMARK T_ID T_SPEACHMARK

   56 EXPR: TERM
   57     | EXPR T_PLUS TERM
   58     | EXPR T_MINUS TERM

   59 TERM: FACTOR
   60     | TERM T_TIMES FACTOR
   61     | TERM T_DIVIDE FACTOR
   62     | TERM T_EXPONENT FACTOR

   63 FACTOR: T_LBRACKET EXPR T_RBRACKET
   64       | T_ID T_LBRACKET ARGUMENT_LIST_NO_TYPE T_RBRACKET
   65       | NUMBER
   66       | ID

   67 NUMBER: T_NUMBER
   68       | T_MINUS T_NUMBER

   69 ID: T_ID


Terminals, with rules where they appear

$end (0) 0
error (256)
T_LSQBRACKET (258)
T_RSQBRACKET (259)
T_LCUBRACKET (260) 7 39 40 41 42
T_RCUBRACKET (261) 7 39 40 41 42
T_LTRIBRACKET (262)
T_RTRIBRACKET (263)
T_LBRACKET (264) 7 34 53 63 64
T_RBRACKET (265) 7 34 53 63 64
T_ASSIGN (266) 31 33
T_DOT (267)
T_COMMA (268) 8 11 12
T_COLON (269)
T_SEMICOLON (270) 30 31 32 33 34
T_SPEACHMARK (271) 55
T_APOSTROPHE (272)
T_LAND (273) 44
T_LOR (274) 45
T_LNOT (275) 46
T_LEQUAL (276) 43
T_LNOTEQUAL (277) 47
T_LLESSEQUAL (278) 51
T_LMOREEQUAL (279) 50
T_LMORE (280) 48
T_LLESS (281) 49
T_INT (282) 16
T_DOUBLE (283) 17
T_STRING (284) 18
T_BOOL (285) 20
T_VOID (286) 19
T_TIMES (287) 60
T_DIVIDE (288) 61
T_PLUS (289) 57
T_MINUS (290) 58 68
T_EXPONENT (291) 62
T_NUMBER (292) 67 68
T_ID (293) 7 8 9 31 32 33 34 55 64 69
T_COMMENT (294)
T_RETURN (295) 30
T_ELSE (296) 41 42
T_IF (297) 40 41
T_WHILE (298) 39


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
ROOT (45)
    on left: 1, on right: 0
TOP_LEVEL (46)
    on left: 2, on right: 1
FUNCTION_LIST (47)
    on left: 3 4 5 6, on right: 2 3 4
DEC_FUNCTION (48)
    on left: 7, on right: 3 5
ARGUMENT_LIST (49)
    on left: 8 9 10, on right: 7 8
ARGUMENT_LIST_NO_TYPE (50)
    on left: 11 12 13 14 15, on right: 11 12 34 64
TYPE (51)
    on left: 16 17 18 19 20, on right: 7 8 9 31 32
BODY (52)
    on left: 21 22 23, on right: 7 21 39 40 41 42
STATEMENT (53)
    on left: 24 25 26 27 28 29, on right: 21 22
RETURN_STATEMENT (54)
    on left: 30, on right: 24
DEC_VARIABLE (55)
    on left: 31 32, on right: 4 6 25
ASSIGN_STATEMENT (56)
    on left: 33, on right: 27
FUNCTION_STATEMENT (57)
    on left: 34, on right: 26
IFANDORELSEORELIF (58)
    on left: 35 36, on right: 28
IFANDORELIF (59)
    on left: 37 38, on right: 35 36 37
WHILE_STATEMENT (60)
    on left: 39, on right: 29
IF_STATEMENT (61)
    on left: 40, on right: 38
ELSE_IF_STATEMENT (62)
    on left: 41, on right: 37
ELSE_STATEMENT (63)
    on left: 42, on right: 35
CONDITION (64)
    on left: 43 44 45 46 47 48 49 50 51 52 53, on right: 39 40 41 43
    44 45 46 47 48 49 50 51 53
EXPR_TOP (65)
    on left: 54 55, on right: 30 31 33 52
EXPR (66)
    on left: 56 57 58, on right: 54 57 58 63
TERM (67)
    on left: 59 60 61 62, on right: 56 57 58 60 61 62
FACTOR (68)
    on left: 63 64 65 66, on right: 59 60 61 62
NUMBER (69)
    on left: 67 68, on right: 12 14 65
ID (70)
    on left: 69, on right: 11 13 66


State 0

    0 $accept: . ROOT $end

    T_INT     shift, and go to state 1
    T_DOUBLE  shift, and go to state 2
    T_STRING  shift, and go to state 3
    T_BOOL    shift, and go to state 4
    T_VOID    shift, and go to state 5

    ROOT           go to state 6
    TOP_LEVEL      go to state 7
    FUNCTION_LIST  go to state 8
    DEC_FUNCTION   go to state 9
    TYPE           go to state 10
    DEC_VARIABLE   go to state 11


State 1

   16 TYPE: T_INT .

    $default  reduce using rule 16 (TYPE)


State 2

   17 TYPE: T_DOUBLE .

    $default  reduce using rule 17 (TYPE)


State 3

   18 TYPE: T_STRING .

    $default  reduce using rule 18 (TYPE)


State 4

   20 TYPE: T_BOOL .

    $default  reduce using rule 20 (TYPE)


State 5

   19 TYPE: T_VOID .

    $default  reduce using rule 19 (TYPE)


State 6

    0 $accept: ROOT . $end

    $end  shift, and go to state 12


State 7

    1 ROOT: TOP_LEVEL .

    $default  reduce using rule 1 (ROOT)


State 8

    2 TOP_LEVEL: FUNCTION_LIST .
    3 FUNCTION_LIST: FUNCTION_LIST . DEC_FUNCTION
    4              | FUNCTION_LIST . DEC_VARIABLE

    T_INT     shift, and go to state 1
    T_DOUBLE  shift, and go to state 2
    T_STRING  shift, and go to state 3
    T_BOOL    shift, and go to state 4
    T_VOID    shift, and go to state 5

    $default  reduce using rule 2 (TOP_LEVEL)

    DEC_FUNCTION  go to state 13
    TYPE          go to state 10
    DEC_VARIABLE  go to state 14


State 9

    5 FUNCTION_LIST: DEC_FUNCTION .

    $default  reduce using rule 5 (FUNCTION_LIST)


State 10

    7 DEC_FUNCTION: TYPE . T_ID T_LBRACKET ARGUMENT_LIST T_RBRACKET T_LCUBRACKET BODY T_RCUBRACKET
   31 DEC_VARIABLE: TYPE . T_ID T_ASSIGN EXPR_TOP T_SEMICOLON
   32             | TYPE . T_ID T_SEMICOLON

    T_ID  shift, and go to state 15


State 11

    6 FUNCTION_LIST: DEC_VARIABLE .

    $default  reduce using rule 6 (FUNCTION_LIST)


State 12

    0 $accept: ROOT $end .

    $default  accept


State 13

    3 FUNCTION_LIST: FUNCTION_LIST DEC_FUNCTION .

    $default  reduce using rule 3 (FUNCTION_LIST)


State 14

    4 FUNCTION_LIST: FUNCTION_LIST DEC_VARIABLE .

    $default  reduce using rule 4 (FUNCTION_LIST)


State 15

    7 DEC_FUNCTION: TYPE T_ID . T_LBRACKET ARGUMENT_LIST T_RBRACKET T_LCUBRACKET BODY T_RCUBRACKET
   31 DEC_VARIABLE: TYPE T_ID . T_ASSIGN EXPR_TOP T_SEMICOLON
   32             | TYPE T_ID . T_SEMICOLON

    T_LBRACKET   shift, and go to state 16
    T_ASSIGN     shift, and go to state 17
    T_SEMICOLON  shift, and go to state 18


State 16

    7 DEC_FUNCTION: TYPE T_ID T_LBRACKET . ARGUMENT_LIST T_RBRACKET T_LCUBRACKET BODY T_RCUBRACKET

    T_INT     shift, and go to state 1
    T_DOUBLE  shift, and go to state 2
    T_STRING  shift, and go to state 3
    T_BOOL    shift, and go to state 4
    T_VOID    shift, and go to state 5

    $default  reduce using rule 10 (ARGUMENT_LIST)

    ARGUMENT_LIST  go to state 19
    TYPE           go to state 20


State 17

   31 DEC_VARIABLE: TYPE T_ID T_ASSIGN . EXPR_TOP T_SEMICOLON

    T_LBRACKET    shift, and go to state 21
    T_SPEACHMARK  shift, and go to state 22
    T_MINUS       shift, and go to state 23
    T_NUMBER      shift, and go to state 24
    T_ID          shift, and go to state 25

    EXPR_TOP  go to state 26
    EXPR      go to state 27
    TERM      go to state 28
    FACTOR    go to state 29
    NUMBER    go to state 30
    ID        go to state 31


State 18

   32 DEC_VARIABLE: TYPE T_ID T_SEMICOLON .

    $default  reduce using rule 32 (DEC_VARIABLE)


State 19

    7 DEC_FUNCTION: TYPE T_ID T_LBRACKET ARGUMENT_LIST . T_RBRACKET T_LCUBRACKET BODY T_RCUBRACKET
    8 ARGUMENT_LIST: ARGUMENT_LIST . T_COMMA TYPE T_ID

    T_RBRACKET  shift, and go to state 32
    T_COMMA     shift, and go to state 33


State 20

    9 ARGUMENT_LIST: TYPE . T_ID

    T_ID  shift, and go to state 34


State 21

   63 FACTOR: T_LBRACKET . EXPR T_RBRACKET

    T_LBRACKET  shift, and go to state 21
    T_MINUS     shift, and go to state 23
    T_NUMBER    shift, and go to state 24
    T_ID        shift, and go to state 25

    EXPR    go to state 35
    TERM    go to state 28
    FACTOR  go to state 29
    NUMBER  go to state 30
    ID      go to state 31


State 22

   55 EXPR_TOP: T_SPEACHMARK . T_ID T_SPEACHMARK

    T_ID  shift, and go to state 36


State 23

   68 NUMBER: T_MINUS . T_NUMBER

    T_NUMBER  shift, and go to state 37


State 24

   67 NUMBER: T_NUMBER .

    $default  reduce using rule 67 (NUMBER)


State 25

   64 FACTOR: T_ID . T_LBRACKET ARGUMENT_LIST_NO_TYPE T_RBRACKET
   69 ID: T_ID .

    T_LBRACKET  shift, and go to state 38

    $default  reduce using rule 69 (ID)


State 26

   31 DEC_VARIABLE: TYPE T_ID T_ASSIGN EXPR_TOP . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 39


State 27

   54 EXPR_TOP: EXPR .
   57 EXPR: EXPR . T_PLUS TERM
   58     | EXPR . T_MINUS TERM

    T_PLUS   shift, and go to state 40
    T_MINUS  shift, and go to state 41

    $default  reduce using rule 54 (EXPR_TOP)


State 28

   56 EXPR: TERM .
   60 TERM: TERM . T_TIMES FACTOR
   61     | TERM . T_DIVIDE FACTOR
   62     | TERM . T_EXPONENT FACTOR

    T_TIMES     shift, and go to state 42
    T_DIVIDE    shift, and go to state 43
    T_EXPONENT  shift, and go to state 44

    $default  reduce using rule 56 (EXPR)


State 29

   59 TERM: FACTOR .

    $default  reduce using rule 59 (TERM)


State 30

   65 FACTOR: NUMBER .

    $default  reduce using rule 65 (FACTOR)


State 31

   66 FACTOR: ID .

    $default  reduce using rule 66 (FACTOR)


State 32

    7 DEC_FUNCTION: TYPE T_ID T_LBRACKET ARGUMENT_LIST T_RBRACKET . T_LCUBRACKET BODY T_RCUBRACKET

    T_LCUBRACKET  shift, and go to state 45


State 33

    8 ARGUMENT_LIST: ARGUMENT_LIST T_COMMA . TYPE T_ID

    T_INT     shift, and go to state 1
    T_DOUBLE  shift, and go to state 2
    T_STRING  shift, and go to state 3
    T_BOOL    shift, and go to state 4
    T_VOID    shift, and go to state 5

    TYPE  go to state 46


State 34

    9 ARGUMENT_LIST: TYPE T_ID .

    $default  reduce using rule 9 (ARGUMENT_LIST)


State 35

   57 EXPR: EXPR . T_PLUS TERM
   58     | EXPR . T_MINUS TERM
   63 FACTOR: T_LBRACKET EXPR . T_RBRACKET

    T_RBRACKET  shift, and go to state 47
    T_PLUS      shift, and go to state 40
    T_MINUS     shift, and go to state 41


State 36

   55 EXPR_TOP: T_SPEACHMARK T_ID . T_SPEACHMARK

    T_SPEACHMARK  shift, and go to state 48


State 37

   68 NUMBER: T_MINUS T_NUMBER .

    $default  reduce using rule 68 (NUMBER)


State 38

   64 FACTOR: T_ID T_LBRACKET . ARGUMENT_LIST_NO_TYPE T_RBRACKET

    T_MINUS   shift, and go to state 23
    T_NUMBER  shift, and go to state 24
    T_ID      shift, and go to state 49

    $default  reduce using rule 15 (ARGUMENT_LIST_NO_TYPE)

    ARGUMENT_LIST_NO_TYPE  go to state 50
    NUMBER                 go to state 51
    ID                     go to state 52


State 39

   31 DEC_VARIABLE: TYPE T_ID T_ASSIGN EXPR_TOP T_SEMICOLON .

    $default  reduce using rule 31 (DEC_VARIABLE)


State 40

   57 EXPR: EXPR T_PLUS . TERM

    T_LBRACKET  shift, and go to state 21
    T_MINUS     shift, and go to state 23
    T_NUMBER    shift, and go to state 24
    T_ID        shift, and go to state 25

    TERM    go to state 53
    FACTOR  go to state 29
    NUMBER  go to state 30
    ID      go to state 31


State 41

   58 EXPR: EXPR T_MINUS . TERM

    T_LBRACKET  shift, and go to state 21
    T_MINUS     shift, and go to state 23
    T_NUMBER    shift, and go to state 24
    T_ID        shift, and go to state 25

    TERM    go to state 54
    FACTOR  go to state 29
    NUMBER  go to state 30
    ID      go to state 31


State 42

   60 TERM: TERM T_TIMES . FACTOR

    T_LBRACKET  shift, and go to state 21
    T_MINUS     shift, and go to state 23
    T_NUMBER    shift, and go to state 24
    T_ID        shift, and go to state 25

    FACTOR  go to state 55
    NUMBER  go to state 30
    ID      go to state 31


State 43

   61 TERM: TERM T_DIVIDE . FACTOR

    T_LBRACKET  shift, and go to state 21
    T_MINUS     shift, and go to state 23
    T_NUMBER    shift, and go to state 24
    T_ID        shift, and go to state 25

    FACTOR  go to state 56
    NUMBER  go to state 30
    ID      go to state 31


State 44

   62 TERM: TERM T_EXPONENT . FACTOR

    T_LBRACKET  shift, and go to state 21
    T_MINUS     shift, and go to state 23
    T_NUMBER    shift, and go to state 24
    T_ID        shift, and go to state 25

    FACTOR  go to state 57
    NUMBER  go to state 30
    ID      go to state 31


State 45

    7 DEC_FUNCTION: TYPE T_ID T_LBRACKET ARGUMENT_LIST T_RBRACKET T_LCUBRACKET . BODY T_RCUBRACKET

    T_INT     shift, and go to state 1
    T_DOUBLE  shift, and go to state 2
    T_STRING  shift, and go to state 3
    T_BOOL    shift, and go to state 4
    T_VOID    shift, and go to state 5
    T_ID      shift, and go to state 58
    T_RETURN  shift, and go to state 59
    T_IF      shift, and go to state 60
    T_WHILE   shift, and go to state 61

    T_INT     [reduce using rule 23 (BODY)]
    T_DOUBLE  [reduce using rule 23 (BODY)]
    T_STRING  [reduce using rule 23 (BODY)]
    T_BOOL    [reduce using rule 23 (BODY)]
    T_VOID    [reduce using rule 23 (BODY)]
    T_ID      [reduce using rule 23 (BODY)]
    T_RETURN  [reduce using rule 23 (BODY)]
    T_IF      [reduce using rule 23 (BODY)]
    T_WHILE   [reduce using rule 23 (BODY)]
    $default  reduce using rule 23 (BODY)

    TYPE                go to state 62
    BODY                go to state 63
    STATEMENT           go to state 64
    RETURN_STATEMENT    go to state 65
    DEC_VARIABLE        go to state 66
    ASSIGN_STATEMENT    go to state 67
    FUNCTION_STATEMENT  go to state 68
    IFANDORELSEORELIF   go to state 69
    IFANDORELIF         go to state 70
    WHILE_STATEMENT     go to state 71
    IF_STATEMENT        go to state 72


State 46

    8 ARGUMENT_LIST: ARGUMENT_LIST T_COMMA TYPE . T_ID

    T_ID  shift, and go to state 73


State 47

   63 FACTOR: T_LBRACKET EXPR T_RBRACKET .

    $default  reduce using rule 63 (FACTOR)


State 48

   55 EXPR_TOP: T_SPEACHMARK T_ID T_SPEACHMARK .

    $default  reduce using rule 55 (EXPR_TOP)


State 49

   69 ID: T_ID .

    $default  reduce using rule 69 (ID)


State 50

   11 ARGUMENT_LIST_NO_TYPE: ARGUMENT_LIST_NO_TYPE . T_COMMA ID
   12                      | ARGUMENT_LIST_NO_TYPE . T_COMMA NUMBER
   64 FACTOR: T_ID T_LBRACKET ARGUMENT_LIST_NO_TYPE . T_RBRACKET

    T_RBRACKET  shift, and go to state 74
    T_COMMA     shift, and go to state 75


State 51

   14 ARGUMENT_LIST_NO_TYPE: NUMBER .

    $default  reduce using rule 14 (ARGUMENT_LIST_NO_TYPE)


State 52

   13 ARGUMENT_LIST_NO_TYPE: ID .

    $default  reduce using rule 13 (ARGUMENT_LIST_NO_TYPE)


State 53

   57 EXPR: EXPR T_PLUS TERM .
   60 TERM: TERM . T_TIMES FACTOR
   61     | TERM . T_DIVIDE FACTOR
   62     | TERM . T_EXPONENT FACTOR

    T_TIMES     shift, and go to state 42
    T_DIVIDE    shift, and go to state 43
    T_EXPONENT  shift, and go to state 44

    $default  reduce using rule 57 (EXPR)


State 54

   58 EXPR: EXPR T_MINUS TERM .
   60 TERM: TERM . T_TIMES FACTOR
   61     | TERM . T_DIVIDE FACTOR
   62     | TERM . T_EXPONENT FACTOR

    T_TIMES     shift, and go to state 42
    T_DIVIDE    shift, and go to state 43
    T_EXPONENT  shift, and go to state 44

    $default  reduce using rule 58 (EXPR)


State 55

   60 TERM: TERM T_TIMES FACTOR .

    $default  reduce using rule 60 (TERM)


State 56

   61 TERM: TERM T_DIVIDE FACTOR .

    $default  reduce using rule 61 (TERM)


State 57

   62 TERM: TERM T_EXPONENT FACTOR .

    $default  reduce using rule 62 (TERM)


State 58

   33 ASSIGN_STATEMENT: T_ID . T_ASSIGN EXPR_TOP T_SEMICOLON
   34 FUNCTION_STATEMENT: T_ID . T_LBRACKET ARGUMENT_LIST_NO_TYPE T_RBRACKET T_SEMICOLON

    T_LBRACKET  shift, and go to state 76
    T_ASSIGN    shift, and go to state 77


State 59

   30 RETURN_STATEMENT: T_RETURN . EXPR_TOP T_SEMICOLON

    T_LBRACKET    shift, and go to state 21
    T_SPEACHMARK  shift, and go to state 22
    T_MINUS       shift, and go to state 23
    T_NUMBER      shift, and go to state 24
    T_ID          shift, and go to state 25

    EXPR_TOP  go to state 78
    EXPR      go to state 27
    TERM      go to state 28
    FACTOR    go to state 29
    NUMBER    go to state 30
    ID        go to state 31


State 60

   40 IF_STATEMENT: T_IF . CONDITION T_LCUBRACKET BODY T_RCUBRACKET

    T_LBRACKET    shift, and go to state 79
    T_SPEACHMARK  shift, and go to state 22
    T_LNOT        shift, and go to state 80
    T_MINUS       shift, and go to state 23
    T_NUMBER      shift, and go to state 24
    T_ID          shift, and go to state 25

    CONDITION  go to state 81
    EXPR_TOP   go to state 82
    EXPR       go to state 27
    TERM       go to state 28
    FACTOR     go to state 29
    NUMBER     go to state 30
    ID         go to state 31


State 61

   39 WHILE_STATEMENT: T_WHILE . CONDITION T_LCUBRACKET BODY T_RCUBRACKET

    T_LBRACKET    shift, and go to state 79
    T_SPEACHMARK  shift, and go to state 22
    T_LNOT        shift, and go to state 80
    T_MINUS       shift, and go to state 23
    T_NUMBER      shift, and go to state 24
    T_ID          shift, and go to state 25

    CONDITION  go to state 83
    EXPR_TOP   go to state 82
    EXPR       go to state 27
    TERM       go to state 28
    FACTOR     go to state 29
    NUMBER     go to state 30
    ID         go to state 31


State 62

   31 DEC_VARIABLE: TYPE . T_ID T_ASSIGN EXPR_TOP T_SEMICOLON
   32             | TYPE . T_ID T_SEMICOLON

    T_ID  shift, and go to state 84


State 63

    7 DEC_FUNCTION: TYPE T_ID T_LBRACKET ARGUMENT_LIST T_RBRACKET T_LCUBRACKET BODY . T_RCUBRACKET
   21 BODY: BODY . STATEMENT

    T_RCUBRACKET  shift, and go to state 85
    T_INT         shift, and go to state 1
    T_DOUBLE      shift, and go to state 2
    T_STRING      shift, and go to state 3
    T_BOOL        shift, and go to state 4
    T_VOID        shift, and go to state 5
    T_ID          shift, and go to state 58
    T_RETURN      shift, and go to state 59
    T_IF          shift, and go to state 60
    T_WHILE       shift, and go to state 61

    TYPE                go to state 62
    STATEMENT           go to state 86
    RETURN_STATEMENT    go to state 65
    DEC_VARIABLE        go to state 66
    ASSIGN_STATEMENT    go to state 67
    FUNCTION_STATEMENT  go to state 68
    IFANDORELSEORELIF   go to state 69
    IFANDORELIF         go to state 70
    WHILE_STATEMENT     go to state 71
    IF_STATEMENT        go to state 72


State 64

   22 BODY: STATEMENT .

    $default  reduce using rule 22 (BODY)


State 65

   24 STATEMENT: RETURN_STATEMENT .

    $default  reduce using rule 24 (STATEMENT)


State 66

   25 STATEMENT: DEC_VARIABLE .

    $default  reduce using rule 25 (STATEMENT)


State 67

   27 STATEMENT: ASSIGN_STATEMENT .

    $default  reduce using rule 27 (STATEMENT)


State 68

   26 STATEMENT: FUNCTION_STATEMENT .

    $default  reduce using rule 26 (STATEMENT)


State 69

   28 STATEMENT: IFANDORELSEORELIF .

    $default  reduce using rule 28 (STATEMENT)


State 70

   35 IFANDORELSEORELIF: IFANDORELIF . ELSE_STATEMENT
   36                  | IFANDORELIF .
   37 IFANDORELIF: IFANDORELIF . ELSE_IF_STATEMENT

    T_ELSE  shift, and go to state 87

    $default  reduce using rule 36 (IFANDORELSEORELIF)

    ELSE_IF_STATEMENT  go to state 88
    ELSE_STATEMENT     go to state 89


State 71

   29 STATEMENT: WHILE_STATEMENT .

    $default  reduce using rule 29 (STATEMENT)


State 72

   38 IFANDORELIF: IF_STATEMENT .

    $default  reduce using rule 38 (IFANDORELIF)


State 73

    8 ARGUMENT_LIST: ARGUMENT_LIST T_COMMA TYPE T_ID .

    $default  reduce using rule 8 (ARGUMENT_LIST)


State 74

   64 FACTOR: T_ID T_LBRACKET ARGUMENT_LIST_NO_TYPE T_RBRACKET .

    $default  reduce using rule 64 (FACTOR)


State 75

   11 ARGUMENT_LIST_NO_TYPE: ARGUMENT_LIST_NO_TYPE T_COMMA . ID
   12                      | ARGUMENT_LIST_NO_TYPE T_COMMA . NUMBER

    T_MINUS   shift, and go to state 23
    T_NUMBER  shift, and go to state 24
    T_ID      shift, and go to state 49

    NUMBER  go to state 90
    ID      go to state 91


State 76

   34 FUNCTION_STATEMENT: T_ID T_LBRACKET . ARGUMENT_LIST_NO_TYPE T_RBRACKET T_SEMICOLON

    T_MINUS   shift, and go to state 23
    T_NUMBER  shift, and go to state 24
    T_ID      shift, and go to state 49

    $default  reduce using rule 15 (ARGUMENT_LIST_NO_TYPE)

    ARGUMENT_LIST_NO_TYPE  go to state 92
    NUMBER                 go to state 51
    ID                     go to state 52


State 77

   33 ASSIGN_STATEMENT: T_ID T_ASSIGN . EXPR_TOP T_SEMICOLON

    T_LBRACKET    shift, and go to state 21
    T_SPEACHMARK  shift, and go to state 22
    T_MINUS       shift, and go to state 23
    T_NUMBER      shift, and go to state 24
    T_ID          shift, and go to state 25

    EXPR_TOP  go to state 93
    EXPR      go to state 27
    TERM      go to state 28
    FACTOR    go to state 29
    NUMBER    go to state 30
    ID        go to state 31


State 78

   30 RETURN_STATEMENT: T_RETURN EXPR_TOP . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 94


State 79

   53 CONDITION: T_LBRACKET . CONDITION T_RBRACKET
   63 FACTOR: T_LBRACKET . EXPR T_RBRACKET

    T_LBRACKET    shift, and go to state 79
    T_SPEACHMARK  shift, and go to state 22
    T_LNOT        shift, and go to state 80
    T_MINUS       shift, and go to state 23
    T_NUMBER      shift, and go to state 24
    T_ID          shift, and go to state 25

    CONDITION  go to state 95
    EXPR_TOP   go to state 82
    EXPR       go to state 96
    TERM       go to state 28
    FACTOR     go to state 29
    NUMBER     go to state 30
    ID         go to state 31


State 80

   46 CONDITION: T_LNOT . CONDITION

    T_LBRACKET    shift, and go to state 79
    T_SPEACHMARK  shift, and go to state 22
    T_LNOT        shift, and go to state 80
    T_MINUS       shift, and go to state 23
    T_NUMBER      shift, and go to state 24
    T_ID          shift, and go to state 25

    CONDITION  go to state 97
    EXPR_TOP   go to state 82
    EXPR       go to state 27
    TERM       go to state 28
    FACTOR     go to state 29
    NUMBER     go to state 30
    ID         go to state 31


State 81

   40 IF_STATEMENT: T_IF CONDITION . T_LCUBRACKET BODY T_RCUBRACKET
   43 CONDITION: CONDITION . T_LEQUAL CONDITION
   44          | CONDITION . T_LAND CONDITION
   45          | CONDITION . T_LOR CONDITION
   47          | CONDITION . T_LNOTEQUAL CONDITION
   48          | CONDITION . T_LMORE CONDITION
   49          | CONDITION . T_LLESS CONDITION
   50          | CONDITION . T_LMOREEQUAL CONDITION
   51          | CONDITION . T_LLESSEQUAL CONDITION

    T_LCUBRACKET  shift, and go to state 98
    T_LAND        shift, and go to state 99
    T_LOR         shift, and go to state 100
    T_LEQUAL      shift, and go to state 101
    T_LNOTEQUAL   shift, and go to state 102
    T_LLESSEQUAL  shift, and go to state 103
    T_LMOREEQUAL  shift, and go to state 104
    T_LMORE       shift, and go to state 105
    T_LLESS       shift, and go to state 106


State 82

   52 CONDITION: EXPR_TOP .

    $default  reduce using rule 52 (CONDITION)


State 83

   39 WHILE_STATEMENT: T_WHILE CONDITION . T_LCUBRACKET BODY T_RCUBRACKET
   43 CONDITION: CONDITION . T_LEQUAL CONDITION
   44          | CONDITION . T_LAND CONDITION
   45          | CONDITION . T_LOR CONDITION
   47          | CONDITION . T_LNOTEQUAL CONDITION
   48          | CONDITION . T_LMORE CONDITION
   49          | CONDITION . T_LLESS CONDITION
   50          | CONDITION . T_LMOREEQUAL CONDITION
   51          | CONDITION . T_LLESSEQUAL CONDITION

    T_LCUBRACKET  shift, and go to state 107
    T_LAND        shift, and go to state 99
    T_LOR         shift, and go to state 100
    T_LEQUAL      shift, and go to state 101
    T_LNOTEQUAL   shift, and go to state 102
    T_LLESSEQUAL  shift, and go to state 103
    T_LMOREEQUAL  shift, and go to state 104
    T_LMORE       shift, and go to state 105
    T_LLESS       shift, and go to state 106


State 84

   31 DEC_VARIABLE: TYPE T_ID . T_ASSIGN EXPR_TOP T_SEMICOLON
   32             | TYPE T_ID . T_SEMICOLON

    T_ASSIGN     shift, and go to state 17
    T_SEMICOLON  shift, and go to state 18


State 85

    7 DEC_FUNCTION: TYPE T_ID T_LBRACKET ARGUMENT_LIST T_RBRACKET T_LCUBRACKET BODY T_RCUBRACKET .

    $default  reduce using rule 7 (DEC_FUNCTION)


State 86

   21 BODY: BODY STATEMENT .

    $default  reduce using rule 21 (BODY)


State 87

   41 ELSE_IF_STATEMENT: T_ELSE . T_IF CONDITION T_LCUBRACKET BODY T_RCUBRACKET
   42 ELSE_STATEMENT: T_ELSE . T_LCUBRACKET BODY T_RCUBRACKET

    T_LCUBRACKET  shift, and go to state 108
    T_IF          shift, and go to state 109


State 88

   37 IFANDORELIF: IFANDORELIF ELSE_IF_STATEMENT .

    $default  reduce using rule 37 (IFANDORELIF)


State 89

   35 IFANDORELSEORELIF: IFANDORELIF ELSE_STATEMENT .

    $default  reduce using rule 35 (IFANDORELSEORELIF)


State 90

   12 ARGUMENT_LIST_NO_TYPE: ARGUMENT_LIST_NO_TYPE T_COMMA NUMBER .

    $default  reduce using rule 12 (ARGUMENT_LIST_NO_TYPE)


State 91

   11 ARGUMENT_LIST_NO_TYPE: ARGUMENT_LIST_NO_TYPE T_COMMA ID .
